syntax = "proto3";
package com.decduck3.ironcomputing.proto;

message MultipartUpload {
    string upload_id = 1;
    bytes data = 2;
    bool next = 3;
}